some experimental work on  explore
